# DataMiningBigProject

./: .gitignore  pyproject.toml  requirements.txt
apps/position/: models.py
apps/position/migrations/: 0001_initial.py  0002_auto_20210611_0918.py
crawl/: fix_data.py  fix_data_redis.py  process_item.py  proxies.py  readme.md  zhi_lian.json
crawl/crawl/: items.py  middlewares.py  pipelines.py  settings.py
crawl/crawl/spiders/: zhilian.py
hiring/: settings.py  wsgi.py
preprocess/: 1-de-duplicate.ipynb  2-drop-fill-na.ipynb  preprocess.ipynb  test.ipynb  test.py
